# ml-lab

./: Makefile  README.md  pyproject.toml
core/: settings.py
dash_app/: __init__.py  app.py  callbacks.py  layouts.py  minimal.py
dash_app/components/: new_training_form.py
data/: loader.py
infrastructure/: docker-compose.yml
infrastructure/dash/: Dockerfile  requirements.txt
